[package]
name = "git-http-router"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.2", features = ["derive"] }
futures = "0.3.30"
futures-util = "0.3.33"
hyper = "1.10.1"
tokio = { version = "1.53.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
